[package]
name = "april-dash"
version = "0.1.0"
edition = "2021"

[dependencies]
better-panic = "0.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures-lite = "2.3.0"
ratatui = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
signal-hook = "0.3.17"
smol = "2.0.0"
[build-dependencies]
vergen = "9.0.0"
