[package]
name = "april-dash"
version = "0.1.0"
edition = "2021"

[lib]
name = "april"
path = "src/lib.rs"

[[bin]]
name = "april-dash"
path = "src/bin/dash.rs"

[dependencies]
async-h1 = "2.3.4"
async-native-tls = "0.5.0"
better-panic = "0.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures-lite = "2.3.0"
http-types = "2.12.0"
ratatui = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
signal-hook = "0.3.17"
smol = "2.0.0"
[build-dependencies]
vergen = "9.0.0"

[lints.rust]
bare_trait_objects = "warn"
elided_lifetimes_in_paths = "warn"
ellipsis_inclusive_range_patterns = "warn"
explicit_outlives_requirements = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unreachable_pub = "warn"
missing_docs = "warn"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"
result_unit_err = "allow"